--- a/src/components/styles/Main.module.css
+++ b/src/components/styles/Main.module.css
@@ -59,36 +59,34 @@
     border: 1px solid black;
 }
 
-.productsHeader {
-    margin: 1rem;
-    padding: 1rem;
-}
-
-
-.listItem {
-    font-size: larger;
-    border: 1px solid black;
-    padding: 2rem;
-    transition: all ease 1000ms;
-}
-.listItem:hover {
-    font-size: larger;
-    margin: 0.2rem;
-
-    border: 1px solid black;
-    border-radius: 10px;
-}
-.productsList {
+.modal {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 3rem;
+    justify-content: center;
+    align-items: center;
 }
 
-.imageContainer {
-    max-width: 15rem;
+.bannerImageContainer {
+    position:static;
+    top: 0;
+    z-index: -10;
+
+    height: 30vh;
+    width: 100vw;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
-.image {
-    width: 10rem;
+.bannerImage {
+    z-index: -10;
+    object-fit:cover;
+
+    height: 100%;
+    width: 90%;
+
+    margin:0;
+    padding: 0;
 }
